--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     // alternatively - Lifecycles only (no ViewModel or LiveData). Some UI
     // AndroidX libraries use this lightweight import for Lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     // For Kotlin use kapt instead of annotationProcessor
     // alternately - if using Java8, use the following instead of lifecycle-compiler
@@ -68,6 +69,10 @@ dependencies {
     implementation 'android.arch.lifecycle:livedata:1.1.1'
     //OTP view
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
+    //Place search Api.
+    implementation "com.google.android.libraries.places:places:$lifecycle_version"
+    //Circular ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.google.android.material:material:1.2.0-alpha05'
 
@@ -75,4 +80,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
