--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     //Firebase dependencies
     implementation "com.google.firebase:firebase-auth:$firebase_version"
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'
+
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     // For Kotlin use kapt instead of annotationProcessor
     // alternately - if using Java8, use the following instead of lifecycle-compiler
@@ -85,4 +87,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'androidx.work:work-runtime:2.3.4'
 }
