--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.github.androidbuffer:kotlinfilepicker:v0.0.4-alpha'
+
+    implementation 'com.github.iammohdzaki:KnotFileChooser-Android:1.0.3.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
