--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:name=".util.LimeApp"
         android:allowBackup="true"
-        android:fullBackupContent="true"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -54,9 +54,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".screens.otp.OtpActivity"
-            android:windowSoftInputMode="stateAlwaysVisible"
-            android:screenOrientation="portrait" />
+        android:name=".screens.otp.OtpActivity"
+        android:windowSoftInputMode="stateAlwaysVisible"
+        android:screenOrientation="portrait" />
         <activity
             android:name=".screens.login.LoginActivity"
             android:screenOrientation="portrait" />
